--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi==0.68.1
+uvicorn==0.15.0
 jinja2==3.1.2
-python-multipart==0.0.6
-python-dotenv==1.0.0
+python-multipart==0.0.5
+python-dotenv==0.19.0
 google-api-python-client==2.108.0
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
-openai==1.3.5
+openai==0.27.0
 schedule==1.2.1
 plotly==5.18.0
 pandas==2.1.4
 numpy==1.26.3
 black==24.1.1
 isort==5.13.2
-mypy==1.8.0 
+mypy==1.8.0
+pydantic==1.8.2 
